# RepoPoppin

./: .gitignore  .prettierrc  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
Recommend/: models.py  new_keras_model.keras
StoreAccessLog/: apps.py  models.py  views.py
StoreAccessLog/migrations/: 0001_initial.py  0002_alter_storeaccesslog_options.py
accesslogs/: admin.py  apps.py  models.py  urls.py  views.py
accesslogs/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  secrets.py  settings.py  urls.py
reports/: admin.py  models.py  serializers.py  views.py
reports/migrations/: 0001_initial.py  0002_report_user.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_created_at_alter_review_updated_at.py  0002_initial.py
stores/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
stores/migrations/: 0001_initial.py  0002_alter_store_created_at_alter_store_updated_at.py  0002_alter_store_news_id.py  0002_store_news_id.py  0002_store_p_category_alter_store_is_visible.py  0003_alter_store_frontlat_alter_store_frontlon.py  0003_remove_store_price_store_img_url.py  0004_remove_store_address_store_poi_address_and_more.py  0004_store_stores_stor_news_id_3a1c0b_idx.py  0005_remove_store_true_address.py  (+3 more)
topstores/: admin.py  apps.py  models.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+9 files in other folders)
